jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:latest
        ports:
        - containerPort: 8096
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
            ephemeral-storage: "1Gi"
          limits:
            cpu: "2"
            memory: "2Gi"
            ephemeral-storage: "2Gi"
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /media
          name: media
        - mountPath: /shared
          name: shared-media
          readOnly: true
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-media
      - name: shared-media
        persistentVolumeClaim:
          claimName: jellyfin-shared-media
